--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.16.4",
-    "@reduxjs/toolkit": "^2.5.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "archiver": "^7.0.1",
     "blueprintjs": "^0.0.8",
-    "neutron-db": "^0.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
