--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.16.4",
-    "@blueprintjs/select": "^5.3.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
+    "antd": "^5.24.0",
     "archiver": "^7.0.1",
-    "blueprintjs": "^0.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
@@ -28,6 +26,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "sass-embedded": "^1.85.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
