--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "archiver": "^7.0.1",
     "jszip": "^3.10.1",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
